Adding exception for boat not found and generic handler & resolving issue Sonar